Added unmapped attributes to dml mapping.